added image, updated font

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 <h2>About Me</h2>
 <p>
     Hello! Thank you for reading my portfolio. My name is Katrina Rodriguez, and I am from San Antonio, Texas. I am currently learning HTML, CSS, and Javascript. Of course, there will be more to add here, once I learn more languages. I am proficient in Microsoft Office. I have a bachelors of Science from Utah State University (Go Aggies!) in Anthropology, and a certificate in Museum Studies. 
-</p>
+    <img src ="assets/images/katrina.jpg" alt ="Katrina" style="width:400px";height="400px">
+  </p>
+
+
 </section>
 
 <section id="work">
