added pictures, and css

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 
 <section id="work">
   <h2>Work</h2>
+  
+  <h3>Run-Buddy</h3>
+  <img src= "assets/images/RunBuddy.jpg" alt = "Run Buddy" style="width:400px",height="600px">
+  <a href ="https://krod2016.github.io/run-buddy/">Run-Buddy Site</a>
+ 
+  <h3>Horiseon</h3>
+  <img src= "assets/images/Horiseon.png" alt = "Horiseon" style="width:400px",height="400px">
+  <a href ="https://krod2016.github.io/UrbanOctoTelegram/">Horiseon Site</a>"
+  <h3>Placeholder</h3>
+  <h3>Placeholder</h3>
+  <h3>Placeholder</h3>
 </section>
 
 <section id="contact">
@@ -50,9 +61,9 @@
 </section>
 
 <address>
-    Phone: 210-519-8696
-    Email: <a href="katrinajrodriguez1993@gmail.com">katrinajrodriguez1993@gmail.com</a>
-    GitHub: <a href="https://github.com/krod2016">GitHub-Account</a>
+    Phone: (210-519-8696) <br/>
+    Email: <a href="katrinajrodriguez1993@gmail.com">katrinajrodriguez1993@gmail.com </a> <br/>
+    GitHub: <a href="https://github.com/krod2016">GitHub-Account </a>
 </address>
 
 </body>
