--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </li>
   
         <li>
-          <a href ="#contact">Contact</a>
+          <a href ="#contact">Contact Me</a>
         </li>
         </ul>
       </nav>
@@ -30,41 +30,61 @@
 
 <section id="about-me">
 <h2>About Me</h2>
+<div class="about-me">
 <p>
-    Hello! Thank you for reading my portfolio. My name is Katrina Rodriguez, and I am from San Antonio, Texas. I am currently learning HTML, CSS, and Javascript. Of course, there will be more to add here, once I learn more languages. I am proficient in Microsoft Office. I have a bachelors of Science from Utah State University (Go Aggies!) in Anthropology, and a certificate in Museum Studies. 
-    <img src ="assets/images/katrina.jpg" alt ="Katrina" style="width:400px";height="400px">
+    Hello! Thank you for reading my portfolio. My name is Katrina Rodriguez, and I am from San Antonio, Texas. I am currently learning HTML, CSS, and Javascript. Of course, there will be more to add here, once I learn more languages. I am proficient in Microsoft Office. I have a bachelors of Science from Utah State University (Go Aggies!) in Anthropology, and a certificate in Museum Studies. I love to learn about everything, and anything I can get my hands on.
   </p>
-
-
+ <img src ="assets/images/katrina.jpg" alt ="Katrina" style="width:400px";height="400px">
+</div>
 </section>
 
 <section id="work">
   <h2>Work</h2>
-  
-  <h3>Run-Buddy</h3>
-  <img src= "assets/images/RunBuddy.jpg" alt = "Run Buddy" style="width:400px",height="600px">
-  <a href ="https://krod2016.github.io/run-buddy/">Run-Buddy Site</a>
+
+<section class="Logan">
+  <div class="LC">
+    <img src ="assets/images/p3.jpg" alt ="LoganCanyon" style="width:400px",height="400px">
+  </div>
+</section>
+</br>
  
-  <h3>Horiseon</h3>
+  <section class="RH">
+  <div class="runbuddy">
+  <a href ="https://krod2016.github.io/run-buddy/">
+  <img src= "assets/images/RunBuddy.jpg" alt = "Run Buddy" style="width:400px",height="600px">
+  </a>
+  </div>
+ 
+  <div class="horiseon">
+  <a href ="https://krod2016.github.io/UrbanOctoTelegram/">
   <img src= "assets/images/Horiseon.png" alt = "Horiseon" style="width:400px",height="400px">
-  <a href ="https://krod2016.github.io/UrbanOctoTelegram/">Horiseon Site</a>"
-  <h3>Placeholder</h3>
-  <h3>Placeholder</h3>
-  <h3>Placeholder</h3>
+  </a>
+  </div>
+  </section>
+
+  <section class="OS">
+  <div class="OC">
+    <img src ="assets/images/p2.jpg" alt ="OregonCoast" style="width:400px",height="400px">
+  </div>
+
+  <div class="SLC">
+    <img src ="assets/images/p1.jpg" alt ="SLC" style="width:400px",height="400px">
+  </div>
+  </section>
 </section>
 
 <section id="contact">
-  <h2>Contact</h2>
+    <h3>Contact</h3>
   <p>
       Please feel free to contact through any of these methods.
   </p>
 </section>
 
-<address>
-    Phone: (210-519-8696) <br/>
-    Email: <a href="katrinajrodriguez1993@gmail.com">katrinajrodriguez1993@gmail.com </a> <br/>
+<footer class="contact-info">
+    Phone: (210-519-8696)
+    Email: <a href="mailto:katrinajrodriguez1993@gmail.com">katrinajrodriguez1993@gmail.com </a>
     GitHub: <a href="https://github.com/krod2016">GitHub-Account </a>
-</address>
+</footer>
 
 </body>
 </html>
