added styling, and text

--- a/index.html
+++ b/index.html
@@ -2,89 +2,109 @@
 <html lang="en-us">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>My Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>My Portfolio</title>
 </head>
 
 <body>
-<header>
+  <header>
     <h1>Portfolio of Katrina Rodriguez</h1>
     <nav>
-        <ul>
-          <li>
-            <a href="#about-me">About Me</a>
-          </li>
-  
-          <li>
-          <a href ="#work">Work</a>
-        </li>
-  
+      <ul>
         <li>
-          <a href ="#contact">Contact Me</a>
+          <a href="#about-me">About Me</a>
         </li>
-        </ul>
-      </nav>
-</header>
 
-<section id="about-me">
-<h2>About Me</h2>
-<div class="about-me">
-<p>
-    Hello! Thank you for reading my portfolio. My name is Katrina Rodriguez, and I am from San Antonio, Texas. I am currently learning HTML, CSS, and Javascript. Of course, there will be more to add here, once I learn more languages. I am proficient in Microsoft Office. I have a bachelors of Science from Utah State University (Go Aggies!) in Anthropology, and a certificate in Museum Studies. I love to learn about everything, and anything I can get my hands on.
-  </p>
- <img src ="assets/images/katrina.jpg" alt ="Katrina" style="width:400px";height="400px">
-</div>
-</section>
+        <li>
+          <a href="#work">Work</a>
+        </li>
 
-<section id="work">
-  <h2>Work</h2>
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-<section class="Logan">
-  <div class="LC">
-    <img src ="assets/images/p3.jpg" alt ="LoganCanyon" style="width:400px",height="400px">
-  </div>
-</section>
-</br>
- 
-  <section class="RH">
-  <div class="runbuddy">
-  <a href ="https://krod2016.github.io/run-buddy/">
-  <img src= "assets/images/RunBuddy.jpg" alt = "Run Buddy" style="width:400px",height="600px">
-  </a>
-  </div>
- 
-  <div class="horiseon">
-  <a href ="https://krod2016.github.io/UrbanOctoTelegram/">
-  <img src= "assets/images/Horiseon.png" alt = "Horiseon" style="width:400px",height="400px">
-  </a>
+  <section id="about-me">
+    <h2>About Me</h2>
+    <div class="bio">
+      <p>
+        Hello! Thank you for reading my portfolio. My name is Katrina Rodriguez, and I am from San Antonio, Texas. I am
+        currently learning HTML, CSS, and Javascript. Of course, there will be more to add here, once I learn more
+        languages. I am proficient in Microsoft Office. I have a bachelors of Science from Utah State University (Go
+        Aggies!) in Anthropology, and a certificate in Museum Studies. I love to learn about everything, and anything I
+        can get my hands on.
+      </p>
+      <img src="assets/images/katrina.jpg" alt="Katrina" style="width:400px" ;height="400px">
+    </div>
+  </section>
+
+  <section id="work">
+    <div class="work-pictures">
+
+      <section class="row1">
+        <div class="RB">
+          <a href="https://krod2016.github.io/run-buddy/">
+            <img src="assets/images/RunBuddy.jpg" alt="Run Buddy" style="width:400px" ,height="400px">
+          </a>
+        </div>
+      </section>
+
+      <div class="break"></div>
+
+      <section class="row">
+        <div class="LC">
+          <img src="assets/images/p3.jpg" alt="LoganCanyon" style="width:345px" ,height="900px">
+        </div>
+      </section>
+
+      <div class="horiseon">
+        <a href="https://krod2016.github.io/UrbanOctoTelegram/">
+          <img src="assets/images/Horiseon.png" alt="Horiseon" style="width:350px" ,height="350px">
+        </a>
+      </div>
+  </section>
+
+  <section class="row">
+    <div class="OC">
+      <img src="assets/images/p2.jpg" alt="OregonCoast" style="width:350px" ,height="350px">
+    </div>
+
+    <div class="SLC">
+      <img src="assets/images/p1.jpg" alt="SLC" style="width:350px" ,height="350px">
+    </div>
+  </section>
+
+  <aside class="section-title">
+    <h2>Work</h2>
+  </aside>
+
   </div>
   </section>
 
-  <section class="OS">
-  <div class="OC">
-    <img src ="assets/images/p2.jpg" alt ="OregonCoast" style="width:400px",height="400px">
-  </div>
+  <section id="contact">
+    <div class="contact-info">
+      <div class="contact">
+        Contact:
+      </div>
 
-  <div class="SLC">
-    <img src ="assets/images/p1.jpg" alt ="SLC" style="width:400px",height="400px">
-  </div>
+      <div>
+        Phone: (210-519-8696)
+      </div>
+
+      <div>
+        Email: <a href="mailto:katrinajrodriguez1993@gmail.com">katrinajrodriguez1993@gmail.com </a>
+      </div>
+
+      <div>
+        GitHub: <a href="https://github.com/krod2016">GitHub-Account </a>
+      </div>
+    </div>
   </section>
-</section>
-
-<section id="contact">
-    <h3>Contact</h3>
-  <p>
-      Please feel free to contact through any of these methods.
-  </p>
-</section>
-
-<footer class="contact-info">
-    Phone: (210-519-8696)
-    Email: <a href="mailto:katrinajrodriguez1993@gmail.com">katrinajrodriguez1993@gmail.com </a>
-    GitHub: <a href="https://github.com/krod2016">GitHub-Account </a>
-</footer>
 
 </body>
+
 </html>
