added css stylings

--- a/index.html
+++ b/index.html
@@ -42,22 +42,26 @@
     </div>
   </section>
 
+  <aside class="section-title">
+    <div>
+      <h2>Work</h2>
+    </div>
+  </aside>
+
   <section id="work">
     <div class="work-pictures">
 
-      <section class="row1">
+      <section class="row">
         <div class="RB">
           <a href="https://krod2016.github.io/run-buddy/">
-            <img src="assets/images/RunBuddy.jpg" alt="Run Buddy" style="width:400px" ,height="400px">
+            <img src="assets/images/RunBuddy.jpg" alt="Run Buddy" style="width:400px" ,height="600px">
           </a>
         </div>
       </section>
 
-      <div class="break"></div>
-
       <section class="row">
         <div class="LC">
-          <img src="assets/images/p3.jpg" alt="LoganCanyon" style="width:345px" ,height="900px">
+          <img src="assets/images/p3.jpg" alt="LoganCanyon" style="width:400px" ,height="400px">
         </div>
       </section>
 
@@ -68,7 +72,9 @@
       </div>
   </section>
 
-  <section class="row">
+  <div class="break"></div>
+
+  <section class="row2">
     <div class="OC">
       <img src="assets/images/p2.jpg" alt="OregonCoast" style="width:350px" ,height="350px">
     </div>
@@ -78,32 +84,32 @@
     </div>
   </section>
 
-  <aside class="section-title">
-    <h2>Work</h2>
-  </aside>
-
   </div>
   </section>
 
-  <section id="contact">
-    <div class="contact-info">
-      <div class="contact">
-        Contact:
-      </div>
+  <footer>
+    <section id="contact">
+      <div class="contact-info">
 
-      <div>
-        Phone: (210-519-8696)
-      </div>
+        <div class="methods">
+          Contact:
+        </div>
 
-      <div>
-        Email: <a href="mailto:katrinajrodriguez1993@gmail.com">katrinajrodriguez1993@gmail.com </a>
-      </div>
+        <div>
+          Phone: (210-519-8696)
+        </div>
 
-      <div>
-        GitHub: <a href="https://github.com/krod2016">GitHub-Account </a>
+        <div>
+          Email: <a href="mailto:katrinajrodriguez1993@gmail.com">katrinajrodriguez1993@gmail.com </a>
+        </div>
+
+        <div>
+          GitHub: <a href="https://github.com/krod2016">GitHub-Account </a>
+        </div>
+
       </div>
-    </div>
-  </section>
+    </section>
+  </footer>
 
 </body>
 
