--- a/index.html
+++ b/index.html
@@ -56,12 +56,22 @@
           <a href="https://krod2016.github.io/run-buddy/">
             <img src="assets/images/RunBuddy.jpg" alt="Run Buddy" style="width:400px" ,height="600px">
           </a>
+          <div class="text-box">
+            <p>
+              Made with HTML and CSS
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="row">
         <div class="LC">
           <img src="assets/images/p3.jpg" alt="LoganCanyon" style="width:400px" ,height="400px">
+          <div class="text-box">
+            <p>
+              Logan, Utah
+            </p>
+          </div>
         </div>
       </section>
 
@@ -69,6 +79,11 @@
         <a href="https://krod2016.github.io/UrbanOctoTelegram/">
           <img src="assets/images/Horiseon.png" alt="Horiseon" style="width:350px" ,height="350px">
         </a>
+        <div class="text-box">
+          <p>
+            Made with HTML and CSS
+          </p>
+        </div>
       </div>
   </section>
 
@@ -77,10 +92,20 @@
   <section class="row2">
     <div class="OC">
       <img src="assets/images/p2.jpg" alt="OregonCoast" style="width:350px" ,height="350px">
+      <div class="text-box">
+        <p>
+          Oregon
+        </p>
+      </div>
     </div>
 
     <div class="SLC">
       <img src="assets/images/p1.jpg" alt="SLC" style="width:350px" ,height="350px">
+      <div class="text-box">
+        <p>
+          Salt Lake City, Utah
+        </p>
+      </div>
     </div>
   </section>
 
