--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
       </section>
 
       <section class="row">
-        <div class="LC">
-          <img src="assets/images/p3.jpg" alt="LoganCanyon" style="width:400px" ,height="400px">
+        <div class="gitShow">
+          <img src="assets/images/gitShow.JPG" alt="Git to the Show" style="width:350px" ,height="350px">
           <div class="text-box">
             <p>
-              Logan, Utah
+              Made with HTML, CSS, and Javascript. 
+            </br>
+            This was a collaborative project with classmates. 
             </p>
           </div>
         </div>
