--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
     <div class="bio">
       <p>
         Hello! Thank you for reading my portfolio. My name is Katrina Rodriguez, and I am from San Antonio, Texas. I am
-        currently learning HTML, CSS, and Javascript. Of course, there will be more to add here, once I learn more
-        languages. I am proficient in Microsoft Office. I have a bachelors of Science from Utah State University (Go
-        Aggies!) in Anthropology, and a certificate in Museum Studies. I love to learn about everything, and anything I
-        can get my hands on.
+        currently on the tail end of my Full Stack Developer Certificate from UT-Austin. I am proficient in Microsoft Office. I have a bachelors of Science from Utah State University (Go Aggies!) in Anthropology, and a certificate in Museum Studies. I love to learn about everything, and anything I can get my hands on.
       </p>
       <img src="assets/images/katrina.jpg" alt="Katrina" style="width:400px" ;height="400px">
     </div>
@@ -66,7 +63,9 @@
 
       <section class="row">
         <div class="gitShow">
-          <img src="assets/images/gitShow.JPG" alt="Git to the Show" style="width:350px" ,height="350px">
+          <a href="https://dianetritchler.github.io/Project1-Group6/">
+            <img src="assets/images/gitShow.JPG" alt="Git to the Show" style="width:350px" ,height="350px">
+          </a>
           <div class="text-box">
             <p>
               Made with HTML, CSS, and Javascript.
@@ -89,13 +88,15 @@
 
   <div class="break"></div>
 
-  <section class="row2">
-    <div class="OC">
-      <img src="assets/images/p2.jpg" alt="OregonCoast" style="width:350px" ,height="350px">
+  <section class="row">
+    <div class="MB">
+      <a href="http://mybrary2400.herokuapp.com/">
+        <img src="assets/images/MyBrary.png" alt="MyBrary" style="width:350px" ,height="350px">
+      </a>
       <div class="text-box">
         <p>
-          Oregon
-        </p>
+          Made with CSS, Handlebars.js, Heroku, MySql2, Node.js, and other technologies.
+          </p>
       </div>
     </div>
 
