--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <h2>About Me</h2>
     <div class="bio">
       <p>
-        Hello! Thank you for reading my portfolio. My name is Katrina Rodriguez, and I am from San Antonio, Texas. I am
-        currently on the tail end of my Full Stack Developer Certificate from UT-Austin. I am proficient in Microsoft Office. I have a bachelors of Science from Utah State University (Go Aggies!) in Anthropology, and a certificate in Museum Studies. I love to learn about everything, and anything I can get my hands on.
+        Hello! Thank you for reading my portfolio. My name is Katrina Rodriguez, and I am from San Antonio, Texas. I am currently on the tail end of my Full Stack Developer Certificate from UT-Austin. I am proficient in Microsoft Office. I have a bachelors of Science from Utah State University (Go Aggies!) in Anthropology, and a certificate in Museum Studies. I love to learn about everything, and anything I can get my hands on.
       </p>
       <img src="assets/images/katrina.jpg" alt="Katrina" style="width:400px" ;height="400px">
     </div>
